# leonardo_ml_challenge

./: .gitignore  .pre-commit-config.yaml  CHALLENGE_BRIEF.md  DEVELOPMENT_PLAN.md  README.md  execute_text_image_similarity_csv.py  pyproject.toml
.clinerules/Rules/: programming_rules.xml
tests/: test_download.py  test_pipeline_integration.py  test_scoring.py  test_semantic_coherence.py
text_image_similarity/: __init__.py  config.py  download_image_url.py  model_loader.py  pipeline.py  record_class.py  result.py  scoring.py
